[package]
name = "prompt-cache-key"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Stable Anthropic prompt-cache scope hashes. Given (system, tools, model), produce a deterministic key that survives benign reordering."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT"
repository = "https://github.com/MukundaKatta/prompt-cache-key-rs"
homepage = "https://github.com/MukundaKatta/prompt-cache-key-rs"
documentation = "https://docs.rs/prompt-cache-key"
readme = "README.md"
keywords = ["llm", "anthropic", "cache", "ai", "hash"]
categories = ["api-bindings"]
exclude = ["target/*"]

[dependencies]
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
