[package]
name = "prompt-cache-key"
version = "0.1.0"
edition = "2021"
description = "Stable Anthropic prompt cache-scope hashes"
license = "MIT"
repository = "https://github.com/MukundaKatta/prompt-cache-key-rs"
keywords = ["anthropic", "cache", "prompt", "hash", "llm"]
categories = ["api-bindings"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
sha2 = "0.11"
serde_json = "1"
